--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,9 @@ ignore =
     W503,
     F811
 exclude =
-    tests/,
-    */migrations/,
-    venv/,
+    tests/
+    */migrations/
+    venv/
     env/
 per-file-ignores =
     */settings.py:E501
